# software-copyright-toolkit

./: .gitignore  README.md  build_installer.py  open-gui.bat  open-gui.command  open-gui.ps1  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
launchers/: open-gui.bat  open-gui.command  open-gui.ps1  open-gui.sh
src/software_copyright_toolkit/: __init__.py  adapters.py  cli.py  counter.py  documents.py  gui.py  report.py  scanner.py
tests/: test_adapters.py  test_counter.py  test_documents.py  test_report.py
